just easy problem

--- a/views/polls.ejs
+++ b/views/polls.ejs
@@ -21,7 +21,7 @@
            <ul class="list-group">
             <% for (let p of polls) { %>
                    <li class="list-group-item">
-                    <a href="/polls/<%p. _id%>">
+                    <a href="/polls/<%= p. _id%>">
                       <%= p.title %>
                     </a>
 
