--- a/views/viewPoll.ejs
+++ b/views/viewPoll.ejs
@@ -19,20 +19,29 @@
                     <p>Description: <%= poll.description %></p>
 
                     <div class="my-3">
-                        Result
+                        <h5>Result: </h5>
+                        <ul class="list-group">
+                            <% for (let r of result) { %>
+                                <li class="list-group-item">
+                                    <p>
+                                        <%= r.name %> ---> <strong> <%= r.percentage.toFixed(2) %> % </strong>
+                                    </p>
+                                </li>
+                            <% } %>
+                        </ul>
                     </div>
                     <div class="my-4">
                         <h5>What is your Opinion?</h5>
                         <form action="/polls/<%= poll._id %>" method="POST">
                             <% for(let option of poll.options) { %>
                                 <div class="custom-control custom-radio">
-                                    <input type="radio" name = "option" id="<%= option._id %>" class="custom-control-input" value = "<%= option.name %>">
+                                    <input type="radio" name = "option" id="<%= option._id %>" class="custom-control-input" value = "<%= option._id %>">
                                     <label for="<%= option._id %>" class="custom-control-label">
                                         <%= option.name %>
                                     </label>
                                 </div>
                                 <% } %>
-
+ <br><br>
                                 <input type="submit" value="submit your opinion" class="btn btn-primary">
                         </form>
                     </div>
